Added messaging, logins, and creating projects

--- a/src/main/webapp/components/projectlist/projectlist.html
+++ b/src/main/webapp/components/projectlist/projectlist.html
@@ -2,7 +2,7 @@
         <h2>My Projects</h2>	
         <h3>You are involved in {{projects.length}} projects</h3>
             
-        <a class="button create" href="/ordsFrontEnd/projectForm.jsp"> Create new project</a>
+        <a class="button create" href="#/newproject"> Create new project</a>
     
         <div class="panel project" ng-repeat="project in projects">
             <h4>
