Refactored the Project app to make it closer to regular Angular apps. Load initial Project data once in Module.run() method, then refresh on creating a new Project (added a manual Refresh button for testing)

--- a/src/main/webapp/project/views/home.html
+++ b/src/main/webapp/project/views/home.html
@@ -1,9 +1,8 @@
  <div class="homepage">
 
-	 <welcome></welcome>
-    
-    <a class="button create" href="/ordsFrontEnd/preferences.jsp">Account info</a>
-	
+	<welcome></welcome>
+   	
+	<button ng-click="refresh()">Refresh</button>
 	<projects></projects>
 	
 	<stats></stats>
