added breadcrumbs to views, and created an edit project view

--- a/src/main/webapp/project/views/home.html
+++ b/src/main/webapp/project/views/home.html
@@ -1,3 +1,7 @@
+<div class="breadcrumbs-wrapper">
+	<span class="breadcrumbs youarehere">My Projects</span>
+</div>
+
  <div class="homepage">
 
 	<welcome></welcome>
