--- a/src/main/webapp/project/views/project.html
+++ b/src/main/webapp/project/views/project.html
@@ -1,3 +1,8 @@
+<div class="breadcrumbs-wrapper">
+	<a href="#/">My Projects</a>
+	<span class="breadcrumbs youarehere">{{project.name}}</span>
+</div>
+
 <h1>Project: {{project.name}}</h1>
 
 <p>{{project.description}}</p>
@@ -16,7 +21,7 @@
 
 <div class="informationBubble">
     <div class="rightFloat">
-        <a class="button" href="#/views/project/edit/{{project.projectId}}">Edit project details</a>
+        <a class="button" href="#/editproject/{{project.projectId}}">Edit project details</a>
         <a class="button" href="#/views/project/audit/{{project.projectId}}">View audit record</a>
     </div>
     
