Added an edit button for testing

--- a/src/main/webapp/project/components/projectlist/projectlist.html
+++ b/src/main/webapp/project/components/projectlist/projectlist.html
@@ -17,6 +17,7 @@
                     {{project.description}}
                 </div><!-- .inner-child closes -->
                 <div class="project-piece actions">
+					<a class="button create" href="#/editproject/{{project.projectId}}">Edit</a>
                 </div><!-- .project-piece actions closes -->
                 <div class="clear"></div>
             </div><!-- .project closes -->
