Enabled edit member link

--- a/src/main/webapp/project/views/project.html
+++ b/src/main/webapp/project/views/project.html
@@ -39,7 +39,7 @@
 		        <td>{{member.role}}</td>
 
 		        <!-- Buttons -->
-		        <td><a class="button" ng-click="editMember(member.id)">Edit project member</a></td>
+		        <td><a class="button" href="#/project/{{project.projectId}}/member/{{member.id}}">Edit project member</a></td>
 		        <td><a class="button" ng-really-message="Are you sure you want to remove this member?" ng-really-click="removeMember(member.id)">Remove member</a></td>
 		    </tr>
 		</tbody>
