Used a nicer URL for the add member route

--- a/src/main/webapp/project/views/project.html
+++ b/src/main/webapp/project/views/project.html
@@ -19,7 +19,7 @@
 <div class="informationBubble">
     <div class="rightFloat">
         <div>
-            <a class="button" href="#/addmember/{{project.projectId}}">Add new member</a>
+            <a class="button" href="#/project/{{project.projectId}}/newmember">Add new member</a>
         </div>
 	</div>
 
