Removed absolute URL

--- a/src/main/webapp/views/searchresults.html
+++ b/src/main/webapp/views/searchresults.html
@@ -45,7 +45,7 @@
 		</table>
 	</div>
 	
-	<div ng-show="results.$resolved"><dir-pagination-controls template-url="/lib/pagination.tpl.html"></dir-pagination-controls></div>
+	<div ng-show="results.$resolved"><dir-pagination-controls template-url="lib/pagination.tpl.html"></dir-pagination-controls></div>
 	
 	<stats></stats>
 
