--- a/src/main/webapp/components/stats/stats.html
+++ b/src/main/webapp/components/stats/stats.html
@@ -1,7 +1,7 @@
-	<div class="panel ords-in-numbers">
+	<div class="panel ords-in-numbers" ng-show="statistics.$resolved">
 	    <h2>ORDS in numbers</h2>
 	    <div class="inner-child">
-			<p>Total visible ORDS projects: <span class="important-figure">76</span></p>
-	        <p>Total records managed by ORDS: <span class="important-figure">848</span></p>
+			<p>Total visible ORDS projects: <span class="important-figure">{{statistics.numberOfOpenProjects}}</span></p>
+	        <p>Total records managed by ORDS: <span class="important-figure">{{statistics.numberOfRecordsManagedByOrds}}</span></p>
 	    </div><!-- .inner-child closes -->
 	</div><!-- .ords-in-numbers closes -->
