--- a/src/main/webapp/project/views/project.html
+++ b/src/main/webapp/project/views/project.html
@@ -49,8 +49,8 @@
 
 <div class="informationBubble">
     <div class="rightFloat">
-        <a ng-show="project.canEdit" class="button" href="#/editproject/{{project.projectId}}">Edit project details</a>
-        <a class="button" href="#/views/project/audit/{{project.projectId}}">View audit record</a>
+        <a ng-show="project.canEdit" class="button" href="#/project/{{project.projectId}}/edit">Edit project details</a>
+        <a class="button" href="#/project/{{project.projectId}}/audit">View audit record</a>
     </div>
     
     <h2>Project Details</h2>
