--- a/src/main/webapp/components/profile/profile.html
+++ b/src/main/webapp/components/profile/profile.html
@@ -2,7 +2,7 @@
 		 <div ng-switch on="loggedIn">
 			<div ng-switch-when="yes">			
 				 <div class="user">
-				 	<span class="user-label">You are logged in as:</span> <a href="/ordsProjectNode/preferences.jsp"><span class="username">{{user.name}}</span></a>
+				 	<span class="user-label">You are logged in as:</span> <a href="#/profile"><span class="username">{{user.name}}</span></a>
 				 </div>
 				<div class="user-actions">
 					<a class="logout" href="/app/logout.jsp"><span>Log out</span></a>
