Hide buttons for actions the user can't do anyway

--- a/src/main/webapp/project/views/project.html
+++ b/src/main/webapp/project/views/project.html
@@ -9,7 +9,7 @@
 
 <div class="informationBubble">
 	<div class="rightFloat">
-		<a class="button" href="#/views/project/adddatabase/{{project.projectId}}">Add new ORDS database</a>
+		<a ng-show="project.canEdit" class="button" href="#/views/project/adddatabase/{{project.projectId}}">Add new ORDS database</a>
 	</div>
     <h2>Databases</h2>
     <databases></databases>
@@ -19,7 +19,7 @@
 <div class="informationBubble">
     <div class="rightFloat">
         <div>
-            <a class="button" href="#/project/{{project.projectId}}/newmember">Add new member</a>
+            <a ng-show="project.canEdit" class="button" href="#/project/{{project.projectId}}/newmember">Add new member</a>
         </div>
 	</div>
 
@@ -50,7 +50,7 @@
 <div class="informationBubble">
     <div class="rightFloat">
         <a ng-show="project.canEdit" class="button" href="#/project/{{project.projectId}}/edit">Edit project details</a>
-        <a class="button" href="#/project/{{project.projectId}}/audit">View audit record</a>
+        <a ng-show="project.canEdit" class="button" href="#/project/{{project.projectId}}/audit">View audit record</a>
     </div>
     
     <h2>Project Details</h2>
