Modified path to databases view

--- a/src/main/webapp/project/views/project.html
+++ b/src/main/webapp/project/views/project.html
@@ -9,7 +9,7 @@
 
 <div class="informationBubble">
 	<div class="rightFloat">
-		<a ng-show="project.canEdit" class="button" href="#/views/project/adddatabase/{{project.projectId}}">Add new ORDS database</a>
+		<a ng-show="project.canEdit" class="button" href="#/project/{{project.projectId}}/newdatabase">Add new ORDS database</a>
 	</div>
     <h2>Databases</h2>
     <databases></databases>
