Updated to reflect refactoring of API - specifically removing Group

--- a/src/main/webapp/database/views/database.html
+++ b/src/main/webapp/database/views/database.html
@@ -1,7 +1,7 @@
 <div class="breadcrumbs-wrapper">
 	<a href="#/">My Projects</a>
 	<a href="#/project/{{project.projectId}}">{{project.name}}</a>
-	<span class="breadcrumbs youarehere">{{group.dbName}}</span>
+	<span class="breadcrumbs youarehere">{{database.dbName}}</span>
 </div>
               
 <h1>Database Name: {{database.dbName}}</h1>
@@ -12,12 +12,12 @@
 <div class="two-up">
 	<table class="project-billing-info">
 	    <tbody>
-			<tr><th>Name </th> <td>{{group.dbName}}</td></tr>
-	    	<tr><th>Description</th><td>{{group.dbDescription}}</td></tr>
-	    	<tr><th>Database type</th><td>{{group.databaseType}}</td></tr>
-	    	<tr><th>Created on</th><td>{{group.creationDate}}</td></tr>
-	    	<tr><th>Data sources</th><td>{{group.dataSources}}</td></tr>
-	    	<tr><th>Data gathering process</th><td>{{group.dataGatheringProcess}}</td></tr>
+			<tr><th>Name </th> <td>{{database.dbName}}</td></tr>
+	    	<tr><th>Description</th><td>{{database.dbDescription}}</td></tr>
+	    	<tr><th>Database type</th><td>{{database.databaseType}}</td></tr>
+	    	<tr><th>Created on</th><td>{{database.creationDate}}</td></tr>
+	    	<tr><th>Data sources</th><td>{{database.dataSources}}</td></tr>
+	    	<tr><th>Data gathering process</th><td>{{database.dataGatheringProcess}}</td></tr>
 		</tbody>
 	</table>
 
