Database Explorer Top Level Schema Designer addition of quit

--- a/src/main/webapp/database/views/database.html
+++ b/src/main/webapp/database/views/database.html
@@ -55,11 +55,10 @@
 			 </div>
                         
 		    <div>
-		        <a class="ovalbutton" href="#/schema/{{main.physicalDatabaseId}}/{{main.logicalDatabaseId}}/MAIN/{{project.dbServerPublicAddress}}">View and edit database structure</a>
+		        <a class="ovalbutton" href="#/schema/{{project.projectId}}/{{main.logicalDatabaseId}}/{{main.physicalDatabaseId}}/MAIN/{{project.dbServerPublicAddress}}">View and edit database structure</a>
 		    </div>
-
 		    <div>
-		        <a class="ovalbutton" href="">View, edit, and query data</a>
+		        <a class="ovalbutton" href="#/database-explorer/{{project.projectId}}/{{main.logicalDatabaseId}}/{{database.dbName}}/{{main.physicalDatabaseId}}/MAIN/{{project.dbServerPublicAddress}}">View, edit, and query data</a>
 		    </div>
 		    <div>
 				<a class="ovalbutton" href="">Export database</a>
