Added support for contacting project owners

--- a/src/main/webapp/views/searchresults.html
+++ b/src/main/webapp/views/searchresults.html
@@ -36,7 +36,7 @@
 				    </td>
 				    <td>
 				            <div>
-				                <a href="TODO">Contact {{project.user.name}}</a>
+				                <a href="#/contact/{{project.projectId}}">Contact {{project.user.name}}</a>
 				            </div>
 				    </td>
 				    <td>TODO datasets</td>
