Added support for logins and signups

--- a/src/main/webapp/components/login/login.html
+++ b/src/main/webapp/components/login/login.html
@@ -3,9 +3,14 @@
     <div class="inner-child">
         <p>If you are a member of the University of Oxford, please log in using your SSO credentials to  
             <strong>create databases or work with your research data.</strong>
-            </p><p> If this is the first time you have used the ORDS, you will be prompted to register after logging in. </p><p> If you are a member of another UK higher education institution, click the second button below to log in via the UK Access Management Federation. </p><p> If you are not a member of a UK higher education institution, you will need to request a virtual University card (which will provide you with SSO credentials) - to arrange this, please contact the owner of the ORDS project you wish to access.  
-        </p>
+            </p>
+			
+			<p> If this is the first time you have used the ORDS, you will be prompted to register after logging in. </p><p> If you are a member of another UK higher education institution, click the second button below to log in via the UK Access Management Federation.</p>
+			
+			<p> If you are not a member of a UK higher education institution, you will need to request a virtual University card (which will provide you with SSO credentials) - to arrange this, please contact the owner of the ORDS project you wish to access.</p>
     
+			<a class="button" href="#/signup">Sign up to use ORDS</a>
+			<a class="button" href="#/login">Log in using a user name and password</a>
             <a class="button" href="/Shibboleth.sso/Login">Log in using SSO</a>
             <a class="button" href="/Shibboleth.sso/WAYF/UKFederation">Log in via UK Access Management Federation</a>
     
