--- a/src/main/webapp/components/welcome/welcome.html
+++ b/src/main/webapp/components/welcome/welcome.html
@@ -2,4 +2,8 @@
 
      <div class="intro">
          <p>The Online Research Database Service (ORDS) is an online relational database management system for researchers. It is securely hosted on the University of Oxford's private cloud network and supported by staff at IT Services.</p>
+		 
+		 <p ng-show="showPendingMessage()"><em>{{pendingMessage}}</em></p>
      </div><!-- .intro closes -->
+	 
+	 
