--- a/src/main/webapp/table-view/views/tableView.html
+++ b/src/main/webapp/table-view/views/tableView.html
@@ -31,7 +31,7 @@
 			<tbody>
 				<tr ng-repeat="row in tableData.rows | filter:doFilter | orderBy:sortBy">
 					<td class="tdScroll" ng-repeat="column in tableData.columnsByIndex"><input type="text" value="{{row.cell[column.columnName].value}}"/></td>
-					<td class="tdScroll" style="min-width:100px; width:100px;"><img src="images/delete_icon.png" alt="Delete Row" ng-really-message="Are you sure you want to delete this row?" ng-really-click="deleteRow(row)"/>&nbsp;&nbsp;<a href="#/row"><img src="images/pencil.png" alt="Edit Row"/></a></td>
+					<td class="tdScroll" style="min-width:100px; width:100px;"><img src="images/delete_icon.png" alt="Delete Row" ng-really-message="Are you sure you want to delete this row?" ng-really-click="deleteRow(row)"/>&nbsp;&nbsp;<a href="#/row/{{project.projectId}}/{{project.projectDatabaseId}}/{{dbId}}/{{instance}}/{{tableName}}/{{primaryKey}}/{{row.cell[primaryKey].value}}"><img src="images/pencil.png" alt="Edit Row"/></a></td>
 				</tr>
 			</tbody>
 		</table>
