--- a/src/main/webapp/components/profile/profile.html
+++ b/src/main/webapp/components/profile/profile.html
@@ -5,7 +5,7 @@
 				 	<span class="user-label">You are logged in as:</span> <a href="#/profile"><span class="username">{{user.name}}</span></a>
 				 </div>
 				<div class="user-actions">
-					<a class="logout" href="/app/logout.jsp"><span>Log out</span></a>
+					<a class="logout" ng-click="logout()"><span>Log out</span></a>
 				</div>
 		   	</div>
 			<div ng-switch-default>
