Updates for managing milestone and test databases

--- a/src/main/webapp/database-explorer/views/explorer.html
+++ b/src/main/webapp/database-explorer/views/explorer.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class=" two-up options">
-<div><a class="button" href="">View previously saved datasets</a></div>
-<div><a class="button" href="">Query data using query builder</a></div>
-<div><a class="button" href="">Query data using SQL</a></div>
+<div><a class="disabledButton" href="">View previously saved datasets</a></div>
+<div><a class="disabledButton" href="">Query data using query builder</a></div>
+<div><a class="button" href="#/sql-query/{{project.projectId}}/{{logicalDatabaseId}}/{{logicalDatabaseName}}/{{physicalDatabaseId}}/{{instance}}/{{server}}">Query data using SQL</a></div>
 </div>
