--- a/src/main/webapp/database/views/database.html
+++ b/src/main/webapp/database/views/database.html
@@ -22,7 +22,7 @@
 	</table>
 
 	<a class="button delete" ng-really-message="Are you sure you want to delete this database? Please note that this action cannot be undone: once the database has been deleted, there is no way to restore it. In addition to the main database version, any test or milestone versions you have created will also be deleted at the same time, as will any datasets created for this database." ng-really-click="deleteDatabase()">Delete database</a>              
-	<a class="button" href="#/database/{{group.logicalDatabaseId}}/edit">Edit database details</a>
+	<a class="button" href="#/database/{{logicalDatabaseId}}/edit">Edit database details</a>
 </div>
 
 
@@ -61,11 +61,11 @@
 		        <a class="ovalbutton" href="#/database-explorer/{{project.projectId}}/{{main.logicalDatabaseId}}/{{database.dbName}}/{{main.physicalDatabaseId}}/MAIN/{{project.dbServerPublicAddress}}">View, edit, and query data</a>
 		    </div>
 		    <div>
-				<a class="ovalbutton" href="">Export database</a>
+				<a class="disabledButton" href="">Export database</a>
 			</div>
 	
 		    <div>
-				<a class="ovalbutton" href="" >Set as milestone version</a>
+				<a class="ovalbutton" ng-click="setAsMilestoneVersion()") >Set as milestone version</a>
 			</div>
 	
 			<div>
@@ -84,11 +84,10 @@
 		<p> A milestone database version may be considered to be the "best so far" within this part of your project, or a snapshot of the data at a particular point.</p>
 		<div ng-show="milestone">
 		    <div>
-		        <a class="ovalbutton" href="">View and edit database structure</a>
+		        <a class="ovalbutton" href="#/schema/{{project.projectId}}/{{milestone.logicalDatabaseId}}/{{milestone.physicalDatabaseId}}/MILESTONE/{{project.dbServerPublicAddress}}">View and edit database structure</a>
 		    </div>
-
 		    <div>
-		        <a class="ovalbutton" href="">View, edit, and query data</a>
+		        <a class="ovalbutton" href="#/database-explorer/{{project.projectId}}/{{milestone.logicalDatabaseId}}/{{database.dbName}}/{{milestone.physicalDatabaseId}}/MILESTONE/{{project.dbServerPublicAddress}}">View, edit, and query data</a>
 		    </div>
 			<div>
 			    <a class="button delete" ng-really-message="Please confirm that you wish to delete this milestone database version. This action cannot be undone." ng-really-click="deleteMilestoneDatabase()">Delete</a>
@@ -105,22 +104,21 @@
 
 		<div ng-show="test">
 		    <div>
-		        <a class="ovalbutton" href="">View and edit database structure</a>
+		        <a class="ovalbutton" href="#/schema/{{project.projectId}}/{{test.logicalDatabaseId}}/{{test.physicalDatabaseId}}/MILESTONE/{{project.dbServerPublicAddress}">View and edit database structure</a>
 		    </div>
-
 		    <div>
-		        <a class="ovalbutton" href="">View, edit, and query data</a>
+		        <a class="ovalbutton" href="#/database-explorer/{{project.projectId}}/{{test.logicalDatabaseId}}/{{database.dbName}}/{{test.physicalDatabaseId}}/MAIN/{{project.dbServerPublicAddress}}">View, edit, and query data</a>
 		    </div>
 			<div>
 			    <a class="button delete" ng-really-message="Please confirm that you wish to delete this test database version. This action cannot be undone." ng-really-click="deleteTestDatabase()">Delete</a>
 			</div>
 		    <div>
-		        <a class="ovalbutton" href="">Make this the main database</a>
+		        <a class="ovalbutton" ng-click"mergeTestToMain()">Make this the main database</a>
 		    </div>
 		</div>
 		
 		<div ng-show="!test && main">
-			<button class="create" type="submit">Create new test version</button>
+			<button class="create" ng-click="setMainAsTestVersion()">Create new test version</button>
 		</div>
                     
 
