--- a/src/main/webapp/style/buttons.css
+++ b/src/main/webapp/style/buttons.css
@@ -14,7 +14,8 @@
 
 button,
 a.ovalbutton,
-a.button {
+a.button,
+a.disabledButton {
 
 	display: inline-block ;
 border: 1px solid #79550d;
@@ -53,6 +54,30 @@ border-color: #354503;
 
 	
 }
+
+a.disabledButton {
+	color: #ccc;
+	background-color: #D4DABF;
+	/* IE10 Consumer Preview */ 
+	background-image: -ms-linear-gradient(top, #D4DABF 0%, #749802 100%);
+	
+	/* Mozilla Firefox */ 
+	background-image: -moz-linear-gradient(top, #D4DABF 0%, #749802 100%);
+	
+	/* Opera */ 
+	background-image: -o-linear-gradient(top, #D4DABF 0%, #749802 100%);
+	
+	/* Webkit (Safari/Chrome 10) */ 
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #D4DABF), color-stop(1, #749802));
+	
+	/* Webkit (Chrome 11+) */ 
+	background-image: -webkit-linear-gradient(top, #D4DABF 0%, #749802 100%);
+	
+	/* W3C Markup, IE10 Release Preview */ 
+	background-image: linear-gradient(to bottom, #D4DABF 0%, #749802 100%);
+	border-color: #465f06;
+}
+
 
 a.delete
 {
